2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/pdf-surface/main.cc:
	* examples/png_file/main.cc:
	* examples/ps-surface/main.cc:
	* examples/svg-surface/main.cc:
	* examples/text-rotate/text-rotate.cc:
	* tests/test-context.cc: fix a bunch of minor compile errors when compiling
	with -Werror

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: enable extra compiler warnings and -Werror if the
	CAIROMM_DEVEL environment variable is set to 'on'.  This caught the
	following mistake.
	* cairomm/pattern.cc: forgot to return the ColorStop vector

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc: fix a FIXME to match the style of
	ScaledFont::glyph_extents since MSVC (and possibly other compilers) complain
	when allocating an array on the stack and the size of the array is not a
	compile-time constante

2007-04-16  Hugo Vincent  <hugo.vincent@gmail.com>

	* Added QuartzSurface for MacOS X (when cairo is built with Quartz support),
	similar to the existing Win32Surface and XlibSurface. These allow use of 
	platform-specific features and data structures.

2007-03-23  Jonathon Jongsma  <jjongsma@gnome.org>

	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* m4/ax_boost_base.m4:
	* m4/ax_boost_unit_test_framework.m4: Add some basic test infrastructure.
	It's disabled by default, and must be explicitly enabled by passing
	--enable-tests to configure (or by setting the CAIROMM_DEVEL environment
	variable to "on").  It uses the boost unit test framework, but this should
	not be required unless you've explicitly enabled tests.  If tests are
	enabled, you can easily run them with 'make check'
	* tests/Makefile.am:
	* tests/test-context.cc: added the beginning of a test for Cairo::Context.
	Most of these tests are really very interesting.  Basically what I'm trying
	to do is a) test some basic behaviors, and b) excercise the functionality a
	little bit.  One of the tests currently fails due to a RefPtr::cast_dynamic